# namada-api

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  namada-api-implementation-plan.md  namada-api.service  swagger.yaml
docs/: api.html
src/: client.rs  config.rs  main.rs  state.rs
src/models/: error.rs  mod.rs  pos.rs  token.rs
src/routes/: health.rs  info.rs  mod.rs  pos.rs
src/tests/: README.md  health_tests.rs  mod.rs  pos_tests.rs
