[package]
name = "namada-api"
version = "0.1.0"
edition = "2021"
description = "REST API for Namada blockchain"
authors = ["Your Name <your.email@example.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Web framework
axum = "0.6"
tower-http = { version = "0.4", features = ["cors", "trace"] }
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
config = "0.13"
dotenvy = "0.15"
clap = { version = "4.3", features = ["derive", "env"] }

# Namada SDK
namada-sdk = "0.14.0"
tendermint-rpc = { version = "0.29", features = ["http-client"] }

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json"] }
