[package]
name = "namada-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Web framework
warp = "0.3"
tokio = { version = "1.36", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "0.15"
config = "0.13"

# Namada SDK and modules (all at 0.149.1)
namada_sdk = { version = "0.149.1", package = "namada_sdk", default-features = false }
namada_core = { version = "0.149.1", package = "namada_core" }
namada_proof_of_stake = { version = "0.149.1", package = "namada_proof_of_stake" }
namada_state = { version = "0.149.1", package = "namada_state" }
namada_storage = { version = "0.149.1", package = "namada_storage" }
namada_io = { version = "0.149.1", package = "namada_io" }

# Tendermint RPC
tendermint-rpc = { version = "0.40.3", features = ["http-client"] }

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tower = "0.4"
futures = "0.3"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4.2"
